mysvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: myweb-svc-lb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external" #외부용
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "instance" #NLB의 타겟이 EC2 인스턴스
	service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing" #public subnet에 배치
spec:
  type: LoadBalancer
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 8080
