myweb-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myweb-ing
  annotations:
    kubernetes.io/ingress.class: alb #alb를 사용한다는 의미
    alb.ingress.kubernetes.io/target-type: instance #target이 ec2 인스턴스
    alb.ingress.kubernetes.io/scheme: internet-facing #외부에 노출
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myweb-svc-lb
                port:
                  number: 80
